Changed arguments to config and removed "run_pipeline" file
Easier to use if tassel and bowtie2 options are also in the config file.
Removed "run_pipeline" script which was useless, replaced it by
"tassel_pipeline" which contains and launch the commands to run tassel

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [tassel]
-prefix = test_GBS2LK_
-inputDir = ../test_data_GBS2LK/reads/
-keyfile = ../test_data_GBS2LK/keyfile.tsv
+# The path to run_pipeline.pl
+tasselPath = ..\..\..\TASSEL-GBS\TASSEL5\run_pipeline.pl
+prefix = test_prefix
+inputDir = ..\..\GBS2LK_Test_Data\reads
+keyfile = ..\..\GBS2LK_Test_Data\keyfile.tsv
 enzyme = ApeKI
 minkmercount
 minQS
@@ -10,3 +12,11 @@ minkmerlength
 maxkmernum
 batchsize = 16
 Xmx = 10G
+
+# Used during the tassel pipeline
+[bowtie2]
+bowtie2path = ..\..\GBS2LK_Test_Data\mock_bowtie2
+reference = ..\..\GBS2LK_Test_Data\mock_reference.fasta
+
+[global]
+nbthreads = 10
