Memory in Global ini, added UpdatedSNP

--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,6 @@ kmerlength
 minkmerlength
 maxkmernum
 batchsize = 16
-Xmx = 10G
 
 # Used during the tassel pipeline
 [bowtie2]
@@ -20,3 +19,5 @@ reference = ..\..\GBS2LK_Test_Data\mock_reference.fasta
 
 [global]
 nbthreads = 10
+# Memory to use in G
+mem = 10
