Creating constant globals for file names handled by the tassel pipeline

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [tassel]
-# The path to run_pipeline.pl
-tasselPath = ..\..\..\TASSEL-GBS\TASSEL5\run_pipeline.pl
+# The path to tassel folder
+tasselPath = /home/corentin/tools/tassel-5-standalone/
 prefix = test_prefix
-inputDir = ..\..\GBS2LK_Test_Data\reads
-keyfile = ..\..\GBS2LK_Test_Data\keyfile.tsv
+inputDir = /home/corentin/GBS_Tassel/batch1/reads/
+keyfile = /home/corentin/GBS_Tassel/batch1/barcode/keyfile.tsv
 enzyme = ApeKI
 minkmercount
 minQS
@@ -14,10 +14,10 @@ batchsize = 16
 
 # Used during the tassel pipeline
 [bowtie2]
-bowtie2path = ..\..\GBS2LK_Test_Data\mock_bowtie2
-reference = ..\..\GBS2LK_Test_Data\mock_reference.fasta
+bowtie2path = /opt/bix/bowtie2/2.2.6/
+reference = /home/corentin/GBS_Tassel/chilense_MasurNova2/MasurNova2.fasta
 
 [global]
 nbthreads = 10
-# Memory to use in G
-mem = 10
+# Memory to use in Gb
+mem = 15
