Added subprocess with shlex.split, added missing arguments to config.ini

--- a/config_example.ini
+++ b/config_example.ini
@@ -1,16 +1,43 @@
 [tassel]
-# The path to tassel folder
+# =========================
+# Global option for tassel
+# =========================
 tasselPath = /home/corentin/tools/tassel-5-standalone/
 prefix = project1
 inputDir = /home/corentin/GBS_Data/reads/
+outputdir = /home/corentin/GBS_Data/GBS2LK_test/
 keyfile = /home/corentin/GBS_Data/barcode/keyfile.tsv
 enzyme = ApeKI
+# If nothing is specified, the pipeline will run on all the individuals
+taxafile
+
+# ===================
+# SAMToGBSdbPlugin
+# ===================
+alen = 0
+aprop = 0
+minmapq = 0
+
+# ===================
+# GBSToTagsDBPlugin
+# ===================
 minkmercount
 minQS
 kmerlength
 minkmerlength
 maxkmernum
 batchsize = 16
+
+# ===================
+# For SNPCallerPlugin
+# ===================
+maxtagscutsite
+mnlcov
+mnmaf
+# to add:
+#ref
+#gapAlignRatio
+
 
 # Used during the tassel pipeline
 [bowtie2]
