added ProductionSNPCallerPlugin command and options

--- a/config_example.ini
+++ b/config_example.ini
@@ -8,6 +8,7 @@ inputDir = /home/corentin/GBS_Data/reads/
 outputdir = /home/corentin/GBS_Data/GBS2LK_test/
 keyfile = /home/corentin/GBS_Data/barcode/keyfile.tsv
 enzyme = ApeKI
+batchsize = 16
 # If nothing is specified, the pipeline will run on all the individuals
 taxafile
 
@@ -22,11 +23,11 @@ minmapq = 0
 # GBSToTagsDBPlugin
 # ===================
 minkmercount
+# minQS used for "GBSToTagsDBPlugin" and "ProductionSNPCallerPluginV2"
 minQS
 kmerlength
 minkmerlength
 maxkmernum
-batchsize = 16
 
 # ===================
 # For SNPCallerPlugin
@@ -38,6 +39,12 @@ mnmaf
 #ref
 #gapAlignRatio
 
+# =================================
+# For  ProductionSNPCallerPluginV2
+# =================================
+maxdivergence
+avseqerrorrate
+minposqs
 
 # Used during the tassel pipeline
 [bowtie2]
